@startuml

title __CONTROLLERS's Class Diagram__\n

  package Generator {
    package Generator.Controllers {
      class CellLayoutController {
          - imgPath : String
          - selectedSurface : Rectangle
          - x : int
          - y : int
          ~ FrontWallBox : Rectangle
          ~ BackWallBox : Rectangle
          ~ RightWallBox : Rectangle
          ~ LeftWallBox : Rectangle
          ~ CeilingBox : Rectangle
          ~ FloorBox : Rectangle
          ~ AddButton : Button
          ~ ImagePath : TextField
          + Add()
          - selectSurface()
          - frontWallClick()
          - rightWallClick()
          - backWallClick()
          - leftWallClick()
          - ceilingClick()
          - floorClick()
          + Confirm()
          - Cancel()
          - initBoxes()
          + initialize()
      }
    }
  }
  

  package Generator {
    package Generator.Controllers {
      class LaunchController {
          {static} + x : int
          {static} + y : int
          {static} + x1 : int
          {static} + y1 : int
          - fileChooser : FileChooser
          - selectedFile : File
          {static} + currentMode : Mode
          ~ width_tb : TextField
          ~ height_tb : TextField
          ~ cellWidth_tb : TextField
          ~ cellHeight_tb : TextField
          ~ wallFraction_tb : TextField
          ~ fileOutputPath : TextField
          ~ AudioStimButton : JFXButton
          ~ VisualStimButton : JFXButton
          ~ OlfactoryStimButton : JFXButton
          ~ commChoice : ChoiceBox
          ~ AddWallsButton : JFXButton
          ~ RemoveWallsButton : JFXButton
          ~ DefineStimAreaButton : JFXButton
          ~ SelectedCellLabel : Label
          ~ diff : Label
          ~ generated : Label
          + updateLabel()
          + updateDifficulty()
          + updateGenerated()
          - DefStimulusArea()
          - DeleteWalls()
          - CreateWalls()
          - CreateStimulus()
          - ClearMode()
          - FinishedButton()
          - makeNumericOnly()
          + initialize()
      }
    }
  }
  

  package Generator {
    package Generator.Controllers {
      enum Mode {
        CreateWalls
        DeleteWalls
        DefStimArea
        DefStim
        None
      }
    }
  }
  

  package Generator {
    package Generator.Controllers {
      class StimulusSelectionController {
          - fileChooser : FileChooser
          - selectedFile : File
          {static} + setObjectProperties()
          {static} + UpdateMaze()
          - NewAudioStimulus()
          - NewVisualStimulus()
          - NewOlfactoryStimulus()
          + Cancel()
          + initialize()
      }
    }
  }
  

  CellLayoutController -up-|> Initializable
  LaunchController -up-|> Initializable
  LaunchController +-down- Mode
  StimulusSelectionController -up-|> Initializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
